force-app/main/default/objects/Main_Business_Income_Detail__c/Main_Business_Income_Detail__c.object-meta.xml
<CustomObject>
    <description>Main Business Incomes</description>
    <label>Main Business Income Detail</label>
    <nameField>
        <displayFormat>MBID-{00000}</displayFormat>
        <label>Main Business Incomes Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Main Business Income Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>