force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Code</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Main Business Income Detail</relationshipLabel>
    <relationshipName>Main_Business_Income_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>