force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Functional_Currency__c.field-meta.xml
<CustomField>
    <fullName>Functional_Currency__c</fullName>
    <description>Functional Currency</description>
    <label>Functional Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>