force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Functional_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Functional_Currency_Amount__c</fullName>
    <description>Functional Currency Amount</description>
    <label>Functional Currency Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>