force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice Number</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Main Business Income Detail</relationshipLabel>
    <relationshipName>Main_Business_Income_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>