force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice Item Number</description>
    <label>Invoice Item</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipLabel>Main Business Income Detail</relationshipLabel>
    <relationshipName>Main_Business_Income_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>