force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Item_Text__c.field-meta.xml
<CustomField>
    <fullName>Item_Text__c</fullName>
    <label>Item Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>