force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Main_Bussiness_Income__c.field-meta.xml
<CustomField>
    <fullName>Main_Bussiness_Income__c</fullName>
    <label>Main Bussiness Income</label>
    <referenceTo>Main_Business_Income__c</referenceTo>
    <relationshipLabel>Main Business Income Detail</relationshipLabel>
    <relationshipName>Main_Business_Income_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>