force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Original_Currency__c</fullName>
    <description>Original Currency</description>
    <label>Original Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>