force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Original_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Currency_Amount__c</fullName>
    <description>Original Currency Amount</description>
    <label>Original Currency Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>