force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Main Business Income Detail</relationshipLabel>
    <relationshipName>Main_Business_Income_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>