force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <description>Profit Center</description>
    <label>Profit Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>