force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Code__c</fullName>
    <description>Unique Code</description>
    <externalId>true</externalId>
    <label>Unique Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>