force-app/main/default/objects/Main_Business_Income_Detail__c/fields/USD_Amount__c.field-meta.xml
<CustomField>
    <fullName>USD_Amount__c</fullName>
    <label>USD Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>