force-app/main/default/objects/Main_Business_Income_Detail__c/fields/USD_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>USD_Exchange_Rate__c</fullName>
    <label>USD Exchange Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>