force-app/main/default/objects/Main_Business_Income_Detail__c/fields/Voucher_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Item_Number__c</fullName>
    <description>Voucher Item Number</description>
    <label>Voucher Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>